Spacing fixed

--- a/src/css/collection.css
+++ b/src/css/collection.css
@@ -213,6 +213,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  margin-bottom: 20px;
 }
 
 .generation-info {
@@ -226,7 +227,8 @@
   font-weight: bolder; /* Increase font-weight for a bolder look */
   text-transform: uppercase; /* Uppercase text */
   letter-spacing: 2px; /* Add letter spacing for a modern look */
-  margin-bottom: 20px; /* Add bottom margin for separation */
+  margin-bottom: 60px; /* Add bottom margin for separation */
+  margin-top: 45px;
   /* Add any other styles you want */
 }
 
