--- a/src/css/search.css
+++ b/src/css/search.css
@@ -172,6 +172,7 @@ h1 {
   justify-content: center;
   align-items: flex-start;
   min-height: 100svh;
+  margin-top: 30px;
 }
 
 .no-results {
